styling for logo text and fixed spacing in notifications

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -52,6 +52,10 @@
 			position: absolute;
 			right: 64px;
 			top: 13px;
+
+			background: -webkit-linear-gradient(#ffd088, #b4d187, #34b7c5, #589ecc);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
 		}
 	}
 }
